[package]
name = "idealist"
version = "0.1.2"
description = "A library of non-empty wrappers for standard list types."
readme = "README.md"
homepage = "https://github.com/hyperum/idealist-rs"
documentation = "https://docs.rs/idealist"
repository = "https://github.com/hyperum/idealist-rs"
license = "MIT"
authors = ["Aaron Yeoh Cruz <aaronhyperum@gmail.com>"]
keywords = ["non-empty", "nonempty", "wrapper", "slice", "list"]
categories = ["rust-patterns", "no-std"]
edition = "2018"
